--- a/animes/bleach/bleach.html
+++ b/animes/bleach/bleach.html
@@ -11,8 +11,8 @@
   gtag('config', 'G-DX8LLFNSW5');
 </script>
 	<meta charset="utf-8">
-	<meta name="description" content="Descargar Death Note en Español Latino y Japones FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Y Full HD Por Mediafire">
-	<meta name="keywords" content="Animes, Online, Descargar, Español Latino, Sin Anuncios, Gratis, Mediafire, death note">
+	<meta name="description" content="Descargar Bleach en Español Latino FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Por Mediafire">
+	<meta name="keywords" content="Animes, Online, Descargar, Español Latino, Sin Anuncios, Gratis, Mediafire">
 	<meta name="robots" content="index, follow">
 	<meta name="author" content="Levi Corrales">
 	<meta name="date" content="2023-12-31">
@@ -20,10 +20,10 @@
 	<meta property="og:title" content="Full Anime">
 	<meta property="og:descrption" content="En este sitio puedes descargar Animes en Español Latino gratis">
 	<meta property="og:type" content="website">
-	
 
-	<title>Descargar Death Note HD | Español Latino y Japones [Dual Audio]</title>
-	<link rel="stylesheet" type="text/css" href="death note.css">
+
+	<title>Descargar Bleach HD | Español Latino</title>
+	<link rel="stylesheet" type="text/css" href="bleach.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="../../icons/css/iconset.css">
 	<link rel="stylesheet" type="text/css" href="../../icons2/css/fontello.css">
@@ -41,18 +41,15 @@
 
 	<div class="informacion">
 		<div class="foto-poster">
-			<img src="../../poster/death note.jpg">
+			<img src="../../poster/bleach 1.jpg">
 		</div>
 		<div class="informacion-de-anime">
-			<h2><b>Death Note</b></h2>
-			<p><b>2006</b></p>
-			<p>
-				La historia se centra en <b>Light Yagami</b>, un estudiante de ecuela secundaria. Un dia encuentra un cuaderno con poderes sobrenaturales llamado <b>"Death Note"</b>, con el cual es capaz de matar personas si se escriben los nombres de estas en el.
-				 Light percantandose del potencial cuaderno intenta, intenta eliminar a todos los criminales y crear un munco donde no exista la maldad; sin embargo, un misterioso detective
-				privado que se hace llamar <b>L</b>, tratara de frustar sus planes.
+			<h2><b>Bleach</b></h2>
+			<p><b>2004</b></p>
+			<p>Narra las aventuras de <b>Ichigo Kurosaki</b>, un adolescente que accidentalmente absorbe los poderes de una <b>shinigami</b> (personificación japonesa del Dios de la muerte) llamada <b>Rukia Kuchiki</b>. Una vez que Ichigo obtiene estas habilidades es obligado a orientar a las almas buenas después de la muerte y defenderlas de los <b>hollows</b>, espíritus malignos que tratan de devorarlas.
 			</p>
-			<p><b>Genero:</b> Shonen/Accion, Suspenso, crimen</p>
-			<p><b>Estudio:</b> Madhouse/VIZ Media</p>
+			<p><b>Genero</b>: Shonen/Accion, fantasia</p>
+			<p><b>Estudio</b>: Pierrot</p>
 			
 		</div>
 	</div>
@@ -123,7 +120,7 @@
 			<input type="texto" name="input-buscador" placeholder="Buscar..." class="input-buscador">
 
 						
-		<ul class="lista-de-series">
+			<ul class="lista-de-series">
 				<div class="item-ul">
 				<button class="series" id="data-serie-0"><div class="img-ul"><img src="../../poster/chainsaw man poster.jpg"></div><div class="text-ul">Chainsaw Man</div></button>
 
@@ -442,6 +439,8 @@
 			</ul>
 			</div>
 
+
+
 			<div class="generos-responsive">
 				<h3>Generos</h3>
 				<button id="accion-responsive">Accion y Aventura</button>
@@ -484,150 +483,80 @@
 			</div>
 		</div>
 		<main class="main">
-			<div class="div-grid-h2"><h2>Temporadas</h2></div>
+		<div class="div-grid-h2"><h2>Series</h2></div>
 			
 			<div class="container-superior-temporadas">
 				<div class="container-info-temporadas">
 					<div class="poster-temporada">
-						<img src="../../poster/death note 2.jpg">
+						<img src="../../poster/bleach 1.jpg">
 					</div>
 					<a href="" class="link-1" target="_blank"></a>
+					<a href="" class="link-temp"></a>
 					<div class="info-temporada">
-						<h3>Temporada: 1</h3>
-						<p>Episodios: 1 al 7</p>
-						<p>2005</p>
-						<p>Idioma: Español Latino/Japones</p>
-						<p>Subtitulos-Si: Español Latino</p>
+						<h3>Bleach Serie Original</h3>
+						<p>Episodios: 366</p>
+						<p>2004</p>
+						<p>Idioma: Español Latino</p>
+						<p>Subtitulos-No</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
 						<button class="boton-descargar-1">Descargar</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
-						<p>Arco: <i>L VS Kira</i></p>
-						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
+						<p>Arco:</p>
+						<p>Relleno: 36%</p>
+						<p><b>Nota:</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
 				<div class="container-info-temporadas">
 					<div class="poster-temporada">
-						<img src="../../poster/death note 2.jpg">
+						<img src="../../poster/bleach 1.jpg">
 					</div>
-					<a href="" class="link-1" target="_blank"></a>
+					<a href="" class="link-1"></a>
 					<div class="info-temporada">
-						<h3>Temporada: 1</h3>
-						<p>Episodios: 8 al 13</p>
-						<p>2005</p>
-						<p>Idioma: Español Latino/Japones</p>
-						<p>Subtitulos-Si: Español Latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-1-2">Descargar</button>
-					</div>
-				</div>
-				<div class="pie-de-temporada">
-						<p>Arco: <i>L VS Kira</i></p>
-						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
-				</div>
-			</div>
-			<div class="container-superior-temporadas">
-				<div class="container-info-temporadas">
-					<div class="poster-temporada">
-						<img src="../../poster/death note 2.jpg">
-					</div>
-					<a href="" class="link-1" target="_blank"></a>
-					<div class="info-temporada">
-						<h3>Temporada: 1</h3>
-						<p>Episodios: 14 al 19</p>
-						<p>2005</p>
-						<p>Idioma: Español Latino/Japones</p>
-						<p>Subtitulos-Si: Español Latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-1-3">Descargar</button>
-					</div>
-				</div>
-				<div class="pie-de-temporada">
-						<p>Arco: <i>L VS Kira</i></p>
-						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
-				</div>
-			</div>
-			<div class="container-superior-temporadas">
-				<div class="container-info-temporadas">
-					<div class="poster-temporada">
-						<img src="../../poster/death note 2.jpg">
-					</div>
-					<a href="" class="link-1" target="_blank"></a>
-					<div class="info-temporada">
-						<h3>Temporada: 1</h3>
-						<p>Episodios: 20 al 25</p>
-						<p>2005</p>
+						<h3>Bleach Kai (Sin Relleno)</h3>
+						<p>Episodios: 139</p>
+						<p>2014</p>
 						<p>Idioma: Español Latino</p>
-						<p>Subtitulos-Si: Español Latino</p>
+						<p>Subtitulos-No</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-1-4">Descargar</button>
+						<button class="boton-descargar-2">Descargar</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
-						<p>Arco</p>
+						<p>Arco:</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
+						<p><b>Nota: la contraseña</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
 				<div class="container-info-temporadas">
 					<div class="poster-temporada">
-						<img src="../../poster/death note.jpg">
+						<img src="../../poster/bleach thosand 1.jpeg">
 					</div>
-					<a href="" class="link-1" target="_blank"></a>
+					>
 					<div class="info-temporada">
-						<h3>Temporada: 2</h3>
-						<p>Episodios: 26 al 31</p>
-						<p>2006</p>
-						<p>Idioma: Español Latino/Japones, capitulo 30 (solo japones)</p>
-						<p>Subtitulos-Si: Español Latino</p>
+						<h3>Bleach: Thousand-Year</h3>
+						<p>Episodios: 26</p>
+						<p>2022</p>
+						<p>Idioma: Español Latino</p>
+						<p>Subtitulos-No</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
-						<div class="div-b-d">
-							<button class="boton-descargar-2">Descargar</button>
-							<button class="boton-descargar-2_2">Descargar cap 30/latino</button>
-						</div>
-						
+						<button class="boton-descargar-thousand">Descargar</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
-						<p>Arco</p>
+						<p>Arco:</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
+						<p><b>Nota:</b></p>
 				</div>
 			</div>
-			<div class="container-superior-temporadas">
-				<div class="container-info-temporadas">
-					<div class="poster-temporada">
-						<img src="../../poster/death note.jpg">
-					</div>
-					<a href="" class="link-1" target="_blank"></a>
-					<div class="info-temporada">
-						<h3>Temporada: 2</h3>
-						<p>Episodios: 32 al 37</p>
-						<p>2006</p>
-						<p>Idioma: Español Latino/Japones</p>
-						<p>Subtitulos-Si: Español Latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-2-2">Descargar</button>
-					</div>
-				</div>
-				<div class="pie-de-temporada">
-						<p>Arco</p>
-						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
-				</div>
-			</div>
+		
+
 			
 
 			
@@ -860,10 +789,11 @@
 
 	<div class="parrafo-final">
 				<p>
-					Es intrigante en inteligente, pero ademas plantea muchas cuestiones y temas que provocan muchos temas morales y eticos. Mezcla de manera brillante la ficcion y la realidad, la mitologia y la sociedad actual, a la que critica duramente de manera directa e indirecta.
+					Como muchos han expresado ya, Bleach es una serie que empieza bien y a partir de cierto punto empieza a decaer. Sin embargo yo ampliaria esta vision, añadiendo que no solo empieza bien, si no que va a mas. Por desgracia la saga del Hueco Mundo y los rellenos estropearon la serie. No obstante la saga del Hueco Mundo no comienza mal del todo, pero creo que se desarrolla mal con el tiempo y acaba siendo una extinta promesa.
 				</p>
 		</div>
 
+	
 	<div class="aside-responsive">
 			<div class="titulo-aside-responsive">
 				<h3>RECOMENDADOS</h3>
@@ -934,7 +864,6 @@
 
 			</div>
 		</div>
-	
 		
 
 	<footer class="footer">
@@ -960,7 +889,7 @@
 			<img src="../../iconos png/icons8-instagram-50.png" id="icono-instagram-footer">
 		</div>
 	</footer>
-<script src="death note.js"></script>
+<script src="bleach.js"></script>
 </body>
 	
 
