--- a/animes/dragon ball gt/dragon ball gt.html
+++ b/animes/dragon ball gt/dragon ball gt.html
@@ -11,8 +11,8 @@
   gtag('config', 'G-DX8LLFNSW5');
 </script>
 	<meta charset="utf-8">
-	<meta name="description" content="Descargar Death Note en Español Latino y Japones FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Y Full HD Por Mediafire">
-	<meta name="keywords" content="Animes, Online, Descargar, Español Latino, Sin Anuncios, Gratis, Mediafire, death note">
+	<meta name="description" content="Descargar Dragon Ball GT en Español Latino FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Por Mediafire">
+	<meta name="keywords" content="Animes, Online, Descargar, Español Latino, Sin Anuncios, Gratis, Mediafire">
 	<meta name="robots" content="index, follow">
 	<meta name="author" content="Levi Corrales">
 	<meta name="date" content="2023-12-31">
@@ -20,10 +20,10 @@
 	<meta property="og:title" content="Full Anime">
 	<meta property="og:descrption" content="En este sitio puedes descargar Animes en Español Latino gratis">
 	<meta property="og:type" content="website">
-	
 
-	<title>Descargar Death Note HD | Español Latino y Japones [Dual Audio]</title>
-	<link rel="stylesheet" type="text/css" href="death note.css">
+
+	<title>Descargar Dragon Ball GT HD | Español Latino</title>
+	<link rel="stylesheet" type="text/css" href="dragon ball gt.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="../../icons/css/iconset.css">
 	<link rel="stylesheet" type="text/css" href="../../icons2/css/fontello.css">
@@ -41,18 +41,16 @@
 
 	<div class="informacion">
 		<div class="foto-poster">
-			<img src="../../poster/death note.jpg">
+			<img src="../../poster/dragon ball gt 1.jpg">
 		</div>
 		<div class="informacion-de-anime">
-			<h2><b>Death Note</b></h2>
-			<p><b>2006</b></p>
+			<h2><b>Dragon Ball GT</b></h2>
+			<p><b>1997</b></p>
 			<p>
-				La historia se centra en <b>Light Yagami</b>, un estudiante de ecuela secundaria. Un dia encuentra un cuaderno con poderes sobrenaturales llamado <b>"Death Note"</b>, con el cual es capaz de matar personas si se escriben los nombres de estas en el.
-				 Light percantandose del potencial cuaderno intenta, intenta eliminar a todos los criminales y crear un munco donde no exista la maldad; sin embargo, un misterioso detective
-				privado que se hace llamar <b>L</b>, tratara de frustar sus planes.
+				La trama de Dragon Ball GT tiene lugar diez años despues de la batalla contra Majin Boo y 5 años tras el final de Dragon Ball Z. Pilaf y sus secuaces logran encontrar las "Esferas del Dragon de Estrellas Negras" que estaban ocultas en una habitacion del templo de Kamisama, durante una pequeña confrontacion con Son Goku, quien habia descubierto sus planes, Pilaf accidentalmente pide en voz alta el deseo de convertir a Goku en niño. 
 			</p>
-			<p><b>Genero:</b> Shonen/Accion, Suspenso, crimen</p>
-			<p><b>Estudio:</b> Madhouse/VIZ Media</p>
+			<p><b>Genero:</b> Shonen/Accion, comedia, fantasia</p>
+			<p><b>Estudio:</b> Toei Animation</p>
 			
 		</div>
 	</div>
@@ -123,7 +121,7 @@
 			<input type="texto" name="input-buscador" placeholder="Buscar..." class="input-buscador">
 
 						
-		<ul class="lista-de-series">
+			<ul class="lista-de-series">
 				<div class="item-ul">
 				<button class="series" id="data-serie-0"><div class="img-ul"><img src="../../poster/chainsaw man poster.jpg"></div><div class="text-ul">Chainsaw Man</div></button>
 
@@ -442,6 +440,8 @@
 			</ul>
 			</div>
 
+
+
 			<div class="generos-responsive">
 				<h3>Generos</h3>
 				<button id="accion-responsive">Accion y Aventura</button>
@@ -484,148 +484,31 @@
 			</div>
 		</div>
 		<main class="main">
-			<div class="div-grid-h2"><h2>Temporadas</h2></div>
+			<div class="div-grid-h2"><h2>Episodios</h2></div>
 			
-			<div class="container-superior-temporadas">
+		<div class="container-superior-temporadas">
 				<div class="container-info-temporadas">
 					<div class="poster-temporada">
-						<img src="../../poster/death note 2.jpg">
+						<img src="../../poster/dragon ball gt 2.jpg">
 					</div>
 					<a href="" class="link-1" target="_blank"></a>
 					<div class="info-temporada">
-						<h3>Temporada: 1</h3>
-						<p>Episodios: 1 al 7</p>
-						<p>2005</p>
-						<p>Idioma: Español Latino/Japones</p>
-						<p>Subtitulos-Si: Español Latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-1">Descargar</button>
-					</div>
-				</div>
-				<div class="pie-de-temporada">
-						<p>Arco: <i>L VS Kira</i></p>
-						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
-				</div>
-			</div>
-			<div class="container-superior-temporadas">
-				<div class="container-info-temporadas">
-					<div class="poster-temporada">
-						<img src="../../poster/death note 2.jpg">
-					</div>
-					<a href="" class="link-1" target="_blank"></a>
-					<div class="info-temporada">
-						<h3>Temporada: 1</h3>
-						<p>Episodios: 8 al 13</p>
-						<p>2005</p>
-						<p>Idioma: Español Latino/Japones</p>
-						<p>Subtitulos-Si: Español Latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-1-2">Descargar</button>
-					</div>
-				</div>
-				<div class="pie-de-temporada">
-						<p>Arco: <i>L VS Kira</i></p>
-						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
-				</div>
-			</div>
-			<div class="container-superior-temporadas">
-				<div class="container-info-temporadas">
-					<div class="poster-temporada">
-						<img src="../../poster/death note 2.jpg">
-					</div>
-					<a href="" class="link-1" target="_blank"></a>
-					<div class="info-temporada">
-						<h3>Temporada: 1</h3>
-						<p>Episodios: 14 al 19</p>
-						<p>2005</p>
-						<p>Idioma: Español Latino/Japones</p>
-						<p>Subtitulos-Si: Español Latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-1-3">Descargar</button>
-					</div>
-				</div>
-				<div class="pie-de-temporada">
-						<p>Arco: <i>L VS Kira</i></p>
-						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
-				</div>
-			</div>
-			<div class="container-superior-temporadas">
-				<div class="container-info-temporadas">
-					<div class="poster-temporada">
-						<img src="../../poster/death note 2.jpg">
-					</div>
-					<a href="" class="link-1" target="_blank"></a>
-					<div class="info-temporada">
-						<h3>Temporada: 1</h3>
-						<p>Episodios: 20 al 25</p>
-						<p>2005</p>
+						<h3>Episodios 1 al 64</h3>
+						<p>Duracion: 24m</p>
+						<p>1997</p>
 						<p>Idioma: Español Latino</p>
-						<p>Subtitulos-Si: Español Latino</p>
+						<p>Subtitulos-No</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-1-4">Descargar</button>
+						<P>Enlace: Mediafire, Mega y Google Drive</P>
+						<button class="boton-descargar-1">Descargar</button>
+						<button class="boton-descargar-2">Descargar Mega</button>
+						<button class="boton-descargar-3">Descargar Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
-				</div>
-			</div>
-			<div class="container-superior-temporadas">
-				<div class="container-info-temporadas">
-					<div class="poster-temporada">
-						<img src="../../poster/death note.jpg">
-					</div>
-					<a href="" class="link-1" target="_blank"></a>
-					<div class="info-temporada">
-						<h3>Temporada: 2</h3>
-						<p>Episodios: 26 al 31</p>
-						<p>2006</p>
-						<p>Idioma: Español Latino/Japones, capitulo 30 (solo japones)</p>
-						<p>Subtitulos-Si: Español Latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<div class="div-b-d">
-							<button class="boton-descargar-2">Descargar</button>
-							<button class="boton-descargar-2_2">Descargar cap 30/latino</button>
-						</div>
-						
-					</div>
-				</div>
-				<div class="pie-de-temporada">
-						<p>Arco</p>
-						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
-				</div>
-			</div>
-			<div class="container-superior-temporadas">
-				<div class="container-info-temporadas">
-					<div class="poster-temporada">
-						<img src="../../poster/death note.jpg">
-					</div>
-					<a href="" class="link-1" target="_blank"></a>
-					<div class="info-temporada">
-						<h3>Temporada: 2</h3>
-						<p>Episodios: 32 al 37</p>
-						<p>2006</p>
-						<p>Idioma: Español Latino/Japones</p>
-						<p>Subtitulos-Si: Español Latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-2-2">Descargar</button>
-					</div>
-				</div>
-				<div class="pie-de-temporada">
-						<p>Arco</p>
-						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>dems021</b></p>
+						<p>Nota: Formato de video-MP4</p>
 				</div>
 			</div>
 			
@@ -860,10 +743,11 @@
 
 	<div class="parrafo-final">
 				<p>
-					Es intrigante en inteligente, pero ademas plantea muchas cuestiones y temas que provocan muchos temas morales y eticos. Mezcla de manera brillante la ficcion y la realidad, la mitologia y la sociedad actual, a la que critica duramente de manera directa e indirecta.
+					"es una anime repetitivo", "a los personajes se les olvidaron sus poderes (o los Nerfearon)", "Goku tiene demasiado protagonismo", "las peleas son pesimas" o "la casi nula inspiracion de Akira Toriyama", pero con una Gran transformacion, gran banda sonora, gran opening, villanos interesantes, buena animacion y buenos momentos hacen que este a la par de Dragon Ball Super.
 				</p>
 		</div>
 
+	
 	<div class="aside-responsive">
 			<div class="titulo-aside-responsive">
 				<h3>RECOMENDADOS</h3>
@@ -934,7 +818,6 @@
 
 			</div>
 		</div>
-	
 		
 
 	<footer class="footer">
@@ -960,7 +843,7 @@
 			<img src="../../iconos png/icons8-instagram-50.png" id="icono-instagram-footer">
 		</div>
 	</footer>
-<script src="death note.js"></script>
+<script src="dragon ball gt.js"></script>
 </body>
 	
 
